--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres.mbfxgnvaprfuxuyxengl:[abhikrantdhepe]@aws-0-ap-south-1.pooler.supabase.com:5432/postgres"
+DATABASE_URL="postgresql://abhikrant.dhepe:j1CFu6bZoKOs@ep-yellow-art-a1rj0v1m-pooler.ap-southeast-1.aws.neon.tech/course-forge?sslmode=require&pgbouncer=true"
+DIRECT_URL="postgresql://abhikrant.dhepe:j1CFu6bZoKOs@ep-yellow-art-a1rj0v1m.ap-southeast-1.aws.neon.tech/course-forge?sslmode=require"
