--- a/.env
+++ b/.env
@@ -6,3 +6,13 @@
 
 DATABASE_URL="postgresql://abhikrant.dhepe:j1CFu6bZoKOs@ep-yellow-art-a1rj0v1m-pooler.ap-southeast-1.aws.neon.tech/course-forge?sslmode=require&pgbouncer=true"
 DIRECT_URL="postgresql://abhikrant.dhepe:j1CFu6bZoKOs@ep-yellow-art-a1rj0v1m.ap-southeast-1.aws.neon.tech/course-forge?sslmode=require"
+
+NEXTAUTH_SECRET = 'abhikrant'
+
+GOOGLE_CLIENT_ID = '529511699916-p8phdio7ju5vnu8frk3a0gbjgpfun37l.apps.googleusercontent.com'
+
+GOOGLE_CLIENT_SECRET = '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'
+
+GITHUB_CLIENT_ID = 'f93b5151406523cc9fcd'
+
+GITHUB_CLIENT_SECRET = 'a3ec7220e601dc4ba89005ffe0940da46dcbded2'
