--- a/.env
+++ b/.env
@@ -16,3 +16,11 @@ GOOGLE_CLIENT_SECRET = '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'
 GITHUB_CLIENT_ID = 'f93b5151406523cc9fcd'
 
 GITHUB_CLIENT_SECRET = 'a3ec7220e601dc4ba89005ffe0940da46dcbded2'
+
+OPENAI_API_KEY='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'
+
+UNSPLASH_API_KEY='OoBK_zssxOkFzldbaY5LOD1GbIL6Nztefni35TWMPGg'
+
+YOUTUBE_API_KEY = 'AIzaSyCloua_ZfLU0sVGgYrbAW6TwZGdnevzqjM'
+
+#Gemini API Key - 'AIzaSyDoBpa7Jez64R2ZCeOheA-1sp7ghfZmI3Y'
